--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "axios": "^1.6.8",
     "date-fns": "^2.30.0",
     "i18next": "^23.11.3",
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.75.0",
-    "zustand": "^4.5.2"
+    "sass": "^1.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
