--- a/package.json
+++ b/package.json
@@ -1,58 +1,65 @@
 {
-  "name": "arosaje-web-frontend",
-  "version": "0.1.0",
+  "name": "gdr-frontend",
   "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@tanstack/react-query": "^5.32.0",
-    "@tanstack/react-query-devtools": "^5.32.0",
-    "axios": "^1.6.8",
-    "date-fns": "^2.30.0",
-    "i18next": "^23.11.3",
-    "mobx": "^6.12.3",
-    "mobx-react": "^9.1.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^13.5.0",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.75.0"
-  },
+  "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "vite build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --report-unused-disable-directives",
     "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@hookform/resolvers": "3.3.4",
+    "@mui/base": "5.0.0-beta.40",
+    "@mui/icons-material": "5.15.15",
+    "@mui/material": "5.15.15",
+    "@mui/system": "5.15.15",
+    "@mui/x-data-grid": "7.1.1",
+    "@mui/x-date-pickers": "7.1.1",
+    "axios": "1.6.2",
+    "date-fns": "3.6.0",
+    "dotenv": "16.4.5",
+    "i18next": "23.11.1",
+    "mobx": "6.12.3",
+    "mobx-react-lite": "4.0.7",
+    "mobx-utils": "6.0.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.51.3",
+    "react-i18next": "14.1.0",
+    "react-number-format": "5.3.4",
+    "react-router-dom": "6.22.3",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5",
-    "vite": "^4.5.3"
+    "@babel/plugin-proposal-decorators": "7.24.1",
+    "@hookform/devtools": "4.3.1",
+    "@testing-library/react": "15.0.1",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.77",
+    "@types/react-dom": "18.2.25",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "@vitejs/plugin-basic-ssl": "1.1.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-mobx": "0.0.9",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.1",
+    "jest": "29.7.0",
+    "prettier": "3.2.5",
+    "sass": "1.75.0",
+    "ts-jest": "29.1.2",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.5",
+    "vite": "5.2.8"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
