--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "14.1.0",
     "react-number-format": "5.3.4",
     "react-router-dom": "6.22.3",
+    "socket.io-client": "^4.7.5",
     "zod": "3.22.4"
   },
   "devDependencies": {
