--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
   "parserOptions": {
     "project": true,
     "tsconfigRootDir": "__dirname",
-    "ecmaVersion": 2023,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": [
@@ -24,6 +24,9 @@
     "prettier"
   ],
   "root": true,
+  "ignorePatterns": [
+    "vite.config.ts"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "react/no-deprecated": "warn",
