--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:9000/api
+VITE_API_URL=https://arosaje-clever-backend.cleverapps.io/api
 REACT_APP_AUTH0_DOMAIN=dev-xg6xqpzynp8fjyur.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=nbTPoue3oDpLGibtuZcK71CPXfG3VZzG
